--- a/week1.Rmd
+++ b/week1.Rmd
@@ -3,25 +3,26 @@ title: "Week1"
 author: "Yi Li"
 date: "2/11/2019"
 output:
-  html_document: default
   pdf_document: default
+  html_document: default
 ---
-###AN EXAMPLE: GDP AND LIFE EXPECTANCY
+# AN EXAMPLE: GDP AND LIFE EXPECTANCY
 ```{r}
-install.packages("gapminder", repos = "http://cran.us.r-project.org")
+# install.packages("gapminder", repos = "http://cran.us.r-project.org")
 library(ggplot2)
 library(gapminder)
-
 #Excerpt of the Gapminder data on life expectancy, GDP per capita, and population by country.
-#Look at data
+```
 
+## Look at data
+```{r}
 gapminder
 str(gapminder)
 summary(gapminder)
 ```
 
-##GGPlot
-##1st layer: Data
+## GGPlot
+## 1st layer: Data
 ```{r}
 p <- ggplot(data = gapminder, aes(x = gdpPercap, y = lifeExp)) # make the graph to an object 
 p
@@ -29,7 +30,7 @@ p + geom_point() # and then tell ggplot we want a scater plot
 ggplot(data = gapminder, aes(x = gdpPercap, y = lifeExp)) + geom_point() # same as above
 ```
 
-Log Transformation
+## Log Transformation
 ```{r}
 # what is the difference？
 ggplot( data = gapminder, aes(x = log(gdpPercap), y = lifeExp)) + geom_point() #ln = log10
@@ -38,14 +39,14 @@ p <- ggplot( data = gapminder, aes(x = log(gdpPercap), y = lifeExp))
 p1 <- ggplot( data = gapminder, aes(x = log10(gdpPercap), y = lifeExp)) + geom_point() + scale_x_log10()
 ```
 
-Color
+## Color
 ```{r}
 p + geom_point( aes(color = continent) )
 p2 <- ggplot( data = gapminder, aes(x= log10(gdpPercap), y = lifeExp)) + scale_x_log10() + geom_point(aes(color = continent))
 p2
 ```
 
-##Reduce overplotting
+## Reduce overplotting
 ```{r}
 ?geom_point
 
@@ -57,33 +58,32 @@ ggplot(data = gapminder, aes(x= log10(gdpPercap), y = lifeExp)) + scale_x_log10(
 ggplot(data = gapminder, aes(x = gdpPercap, y = lifeExp)) + scale_x_log10()
 ```
 
-##Curve Fit: 
-geom_smooth()
-Fiitting a curve to data, aka lowess, aka loess
+## Curve Fit: 
+### geom_smooth()
+### Fiitting a curve to data, aka lowess, aka loess
 (https://www.youtube.com/watch?v=Vf7oJ6z2LCc)
 ```{r}
 p <- ggplot(data = gapminder, aes(x = gdpPercap, y = lifeExp)) + scale_x_log10() 
 p + geom_point(aes(color = continent)) + geom_smooth() #Display confidence interval around smooth
 p + geom_point(aes(color = continent)) + geom_smooth(color = 'black', lwd = 2, se = FALSE)# lwd = line width    se = standard error
 ```
-Change the order of layers
+## Change the order of layers
 ```{r}
 p + geom_smooth(color = "orange") + geom_point(aes(color = continent))
 ```
-Liner fit
+## Liner fit
 ```{r}
 p + geom_point(aes(color = continent)) + geom_smooth(method = "lm")
 ```
-Curve Fit by Continent
+## Curve Fit by Continent
 ```{r}
 p + geom_point(aes(color = continent)) + geom_smooth(aes(color = continent), se = FALSE, lwd = 2)
 ```
-
-##Use aes() at the Beginning to Add Overall Grouping 
+## Use aes() at the Beginning to Add Overall Grouping 
 ```{r}
 p + aes(color = continent) + geom_point() + geom_smooth(lwd = 2, se = FALSE)
 ```
-##A sum of color = continent
+## A sum of color = continent
 ```{r}
 ggplot(gapminder, aes(x = gdpPercap, y = lifeExp, color = continent)) +
   geom_point(aes(color = continent)) + scale_x_log10() +
@@ -98,5 +98,63 @@ ggplot(gapminder, aes(x = gdpPercap, y = lifeExp, color = continent)) +
   geom_smooth(color="black")
 ```
 
-##
+## Layers
+### data + aesthetics + geometries + FACET
+```{r}
+ggplot(data = gapminder, aes( x = gdpPercap, y = lifeExp, color = continent)) +
+  geom_point(alpha=0.5, size=3) +
+  facet_grid(. ~ continent)
+
+ggplot(data = gapminder, aes( x = gdpPercap, y = lifeExp, color = continent)) +
+  geom_point(alpha=0.5, size=3) +
+  facet_wrap(. ~ continent)
+```
+
+### data + aesthetics + geometries + facet + STATISTICS
+```{r}
+ggplot(gapminder, aes(x = gdpPercap, y = lifeExp, color = continent)) +
+        geom_point(alpha=0.5, size=3) + 
+        facet_grid( . ~ continent) + 
+        geom_smooth(color="black", lwd=1, se=TRUE) #statistics
+```
+
+### data + aesthetics + geometries + facet + statistics + COORDINATE(坐标)
+```{r}
+ggplot(gapminder, aes(x = gdpPercap, y = lifeExp)) + 
+  aes(color = continent) + 
+  geom_point(alpha = 0.3, size = 3) +
+  facet_grid(. ~ continent) +
+  geom_smooth(color = "black", se = FALSE) +
+  scale_x_log10("GDP per Capita") +
+  scale_y_continuous("Life Expetancy in Years")
+```
+### ... + statistics + coordinate + THEME
+```{r}
+# install.packages("ggthemes")
+library(ggthemes)
+ggplot(gapminder, aes(x = gdpPercap, y = lifeExp)) + 
+  aes(color = continent) + 
+  geom_point(alpha = 0.3, size = 3) +
+  facet_grid(. ~ continent) +
+  geom_smooth(color = "black", se = FALSE) +
+  scale_x_log10("GDP per Capita") +
+  scale_y_continuous("Life Expetancy in Years") +
+  theme_tufte() + #Tufte Maximal Data, Minimal Ink Theme
+  theme(legend.position="none") #legend: caption
+
+p3 <- ggplot(gapminder, aes(x = gdpPercap, y = lifeExp)) + 
+  aes(color = continent) + 
+  geom_point(alpha = 0.3, size = 3) +
+  facet_grid(. ~ continent) +
+  geom_smooth(color = "black", se = FALSE) +
+  scale_x_log10("GDP per Capita") +
+  scale_y_continuous("Life Expetancy in Years")
+
+p3 + theme_economist()
+p3 + theme_tufte()
+p3 + theme_solarized()
+p3 + theme_few()
+p3 + theme_gdocs()
+p3 + theme_calc()
+```
 
